--- a/style.css
+++ b/style.css
@@ -225,6 +225,30 @@ hr {
   margin-top: 90px;
 }
 
+/* Footer at the bottom */
+.footer {
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #f1f1f1;
+  color: black;
+  text-align: center;
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+i {
+  color: black;
+
+}
+
+i:hover {
+  color: #AEC6CF;
+  transition: 0.4s;
+  cursor: pointer;
+}
+
+
 /* Make text larger and on the left for mobile */
 @media screen and (max-width:800px) {
   .main p {
@@ -232,6 +256,20 @@ hr {
     padding-left: 20px;
     padding-right: 20px;
     text-align: center;
+    padding-top: 10px;
+  }
+
+  .footer {
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #f1f1f1;
+    color: black;
+    text-align: center;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 
@@ -243,4 +281,44 @@ hr {
   .main p iframe {
     height: 400px;
   }
+}
+
+/* ---------------------------------------------------------------------- */
+/* ----------------------------Project-Cards----------------------------- */
+/* ---------------------------------------------------------------------- */
+
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 20px;
+}
+
+/* Remove extra left and right margins, due to padding */
+.row {
+  margin: 0 -5px;
+  padding-top: 10px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+/* Style the counter cards */
+.card {
+  padding: 20px;
+  text-align: center;
+  background-color: #f1f1f1;
 }
