--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ html {
 
 /* Section for text */
 .main {
-  text-align: center;
+  text-align: left;
   padding: 20px;
   margin-top: 20px;
 }
@@ -210,21 +210,26 @@ html {
   padding-left: 100px;
   padding-right: 100px;
   line-height: 1.2;
+  text-align: left;
 }
 
 /* Header Underline */
 hr {
   width: 280px;
-  margin-left: auto;
-  margin-right: auto;
+  text-align: left;
   margin-top: 10px;
   color: black;
+  margin-left: 100px;
 }
 
 /* Adds space for navbar to scroll to */
 .main h2 {
   margin-top: 90px;
   padding-bottom: 20px;
+}
+
+.main headers {
+  text-align: left;
 }
 
 /* Footer at the bottom */
@@ -257,7 +262,7 @@ i:hover {
     font-size: 20px;
     padding-left: 20px;
     padding-right: 20px;
-    text-align: center;
+    text-align: left;
     padding-top: 10px;
   }
 
@@ -272,6 +277,10 @@ i:hover {
     padding-bottom: 25px;
     padding-left: 20px;
     padding-right: 20px;
+  }
+
+  hr {
+    margin-left: 20px;
   }
 }
 
