--- a/style.css
+++ b/style.css
@@ -299,5 +299,31 @@ i:hover {
 }
 
 /* ---------------------------------------------------------------------- */
+/* ----------------------------Contact-form------------------------------ */
+/* ---------------------------------------------------------------------- */
+
+
+/* ---------------------------------------------------------------------- */
 /* ----------------------------Project-Cards----------------------------- */
 /* ---------------------------------------------------------------------- */
+
+.project-card {
+  width: auto;
+  height: 200px;
+  background-color: #f1f1f1;
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-top: 20px;
+}
+
+@media screen and (max-width:800px) {
+  .project-card {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+}
+
+.project-card p {
+  margin-left: 0px;
+  margin-top: 10px;
+}
