--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ html {
 
 .header-gallery{
   height: 80px;
-  background: #000000;
+  background: #FFFFFF;
   padding: 0 20px;
   color: #000000;
   position: fixed;
