--- a/style.css
+++ b/style.css
@@ -32,9 +32,9 @@ html {
 /* -----------------------------Background------------------------------- */
 /* ---------------------------------------------------------------------- */
 
-/* .bg {
-  background-image: url("background2.jpg");
-  height: 40%;
+.bg {
+  background: linear-gradient(to top, white, #AEC6CF);
+  height: 20%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -53,9 +53,9 @@ html {
   }
 
   .bg {
-    background-image: url("background2.jpg");
+    background: linear-gradient(to top, white, #AEC6CF);
   }
-} */
+}
 
 
 /* ---------------------------------------------------------------------- */
@@ -287,12 +287,11 @@ hr {
 
 i {
   color: black;
-
 }
 
 i:hover {
   color: #AEC6CF;
-  transition: 0.4s;
+  transition: 0.4s ease-in-out;
   cursor: pointer;
 }
 
@@ -385,7 +384,7 @@ img {
 .card {
   background-color: #f1f1f1;
   border-radius: 0.25rem;
-  /*box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);*/
+  box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
   overflow: hidden;
