--- a/style.css
+++ b/style.css
@@ -32,9 +32,9 @@ html {
 /* -----------------------------Background------------------------------- */
 /* ---------------------------------------------------------------------- */
 
-.bg {
-  background: linear-gradient(to top, white, #AEC6CF);
-  height: 20%;
+/* .bg {
+  background-image: url("background2.jpg");
+  height: 40%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -53,9 +53,9 @@ html {
   }
 
   .bg {
-    background: linear-gradient(to top, white, #AEC6CF);
+    background-image: url("background2.jpg");
   }
-}
+} */
 
 
 /* ---------------------------------------------------------------------- */
@@ -287,11 +287,12 @@ hr {
 
 i {
   color: black;
+
 }
 
 i:hover {
   color: #AEC6CF;
-  transition: 0.4s ease-in-out;
+  transition: 0.4s;
   cursor: pointer;
 }
 
@@ -384,7 +385,7 @@ img {
 .card {
   background-color: #f1f1f1;
   border-radius: 0.25rem;
-  box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+  /*box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);*/
   display: flex;
   flex-direction: column;
   overflow: hidden;
