--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ html {
 .bg {
   background-image: url("https://i.ibb.co/L60NLPY/download.png");
   height: 25vh;
+  margin-left: 100px;
   /* background-size: cover;
   background-position: center;
   background-attachment: fixed; */
@@ -50,6 +51,11 @@ html {
   .bgtext {
     padding-left: 20px;
     font-size: 15px;
+  }
+
+  .bg {
+    margin-left: 0px;
+    margin-right: 20px;
   }
 }
 
