--- a/style.css
+++ b/style.css
@@ -415,6 +415,30 @@ i:hover {
 }
 
 /* ---------------------------------------------------------------------- */
+/* ---------------------------Colour-Sections---------------------------- */
+/* ---------------------------------------------------------------------- */
+
+/* .colour-section {
+  height: 600px;
+  max-height: 1280px;
+  background-color: #263041;
+  position: relative;
+  margin: 0 auto;
+  word-wrap: break-word;
+  word-break: break-word
+}
+
+.colour-section .content {
+  max-height: 1280px;
+  position: relative;
+}
+
+.no-colour-section {
+  height: 600px;
+  background-color: #fff;
+} */
+
+/* ---------------------------------------------------------------------- */
 /* ----------------------Embeded-REPL.it-editor-------------------------- */
 /* ---------------------------------------------------------------------- */
 
@@ -551,7 +575,7 @@ img {
 
 
 /* ---------------------------------------------------------------------- */
-/* --------------------------------Curve--------------------------------- */
+/* ---------------------------About-me-cards----------------------------- */
 /* ---------------------------------------------------------------------- */
 
 @media screen and (max-width:800px) {
