--- a/style.css
+++ b/style.css
@@ -399,15 +399,20 @@ i:hover {
   transition: 0.4s;
   cursor: pointer;
   padding-bottom: 10px;
+  font-size: 35px;
+  margin-right: 20px;
 }
 
 .fa-github:hover, .fa-instagram:hover, .fa-stack-overflow:hover {
   color: #fff8 !important;
   transition: 0.4s;
   cursor: pointer;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
+.footer a i:hover {
+  margin-bottom: 5px;
+}
 
 /* Make text larger and on the left for mobile */
 @media screen and (max-width:800px) {
@@ -783,6 +788,10 @@ section:nth-child(4){
 
 section .container2{
   margin: 75px;
+}
+
+section .container2 img {
+  height: 20px;
 }
 
 section h1{
